@@ -50,7 +50,6 @@
 //
 // Overrides Bootstrap defaults
 
-
 @panel-default-heading-bg:    @white-dark;
 @panel-footer-bg:             @white-dark;
 @panel-default-border:        @trim;
