@@ -17,6 +17,7 @@ from django.contrib.auth import login as login_user, authenticate
 from django.core.context_processors import csrf
 from django.core.urlresolvers import reverse
 from django.db import IntegrityError, transaction
+from django.db.models import Q
 from django.http import HttpResponseRedirect, Http404, HttpResponse
 from django.views.decorators.http import require_http_methods
 from django.views.decorators.cache import never_cache
@@ -29,7 +30,7 @@ from sudo.decorators import sudo_required
 
 from sentry import newsletter
 from sentry.models import (
-    UserEmail, LostPasswordHash, Project, UserOption, Authenticator
+    User, UserEmail, LostPasswordHash, Project, UserOption, Authenticator
 )
 from sentry.security import capture_security_activity
 from sentry.signals import email_verified
@@ -240,11 +241,21 @@ def account_settings(request):
 
         form.save()
 
-        # remove previously valid email address
+        # update notification settings for those set to primary email with new primary email
+        alert_email = UserOption.objects.get_value(user=user, project=None, key='alert_email')
+
+        if alert_email == old_email:
+            UserOption.objects.set_value(user=user, project=None, key='alert_email', value=user.email)
+        options = UserOption.objects.filter(user=user, key='mail:email')
+        for option in options:
+            if option.value != old_email:
+                continue
+            option.value = user.email
+            option.save()
+
         # TODO(dcramer): we should maintain validation here when we support
         # multiple email addresses
         if request.user.email != old_email:
-            UserEmail.objects.filter(user=user, email=old_email).delete()
             try:
                 with transaction.atomic():
                     user_email = UserEmail.objects.create(
@@ -442,14 +453,10 @@ def disconnect_identity(request, identity_id):
 @login_required
 def show_emails(request):
     user = request.user
+    emails = user.emails.all()
+    email_form = EmailForm(user, request.POST or None)
     primary_email = UserEmail.get_primary_email(user)
-    alt_emails = user.emails.all().exclude(email=primary_email.email)
-
-    email_form = EmailForm(user, request.POST or None,
-        initial={
-            'primary_email': primary_email.email,
-        },
-    )
+    alt_emails = emails.exclude(email=primary_email.email)
 
     if 'remove' in request.POST:
         email = request.POST.get('email')
@@ -463,51 +470,50 @@ def show_emails(request):
 
         return HttpResponseRedirect(request.path)
 
-    if email_form.is_valid():
-        old_email = user.email
+    if 'primary' in request.POST:
+        new_primary = request.POST['new_primary_email'].lower()
 
-        email_form.save()
-
-        if user.email != old_email:
-            queryset = UserOption.objects.filter(
-                user=user,
-                key='mail:email',
+        if User.objects.filter(Q(email__iexact=new_primary) | Q(username__iexact=new_primary)).exclude(id=user.id).exists():
+            messages.add_message(request,
+                messages.ERROR,
+                _("That email is already in use for another user")
             )
-            for option in queryset:
-                if option.value == old_email:
-                    option.value = user.email
-                    option.save()
-            UserEmail.objects.filter(user=user, email=old_email).delete()
-            try:
-                with transaction.atomic():
-                    user_email = UserEmail.objects.create(
-                        user=user,
-                        email=user.email,
-                    )
-            except IntegrityError:
-                pass
-            else:
-                user_email.set_hash()
-                user_email.save()
-                user.send_confirm_email_singular(user_email)
-                # Update newsletter subscription and mark as unverified
-                newsletter.update_subscription(
-                    user=user,
-                    verified=False,
-                )
-                logger.info('user.email.add', extra={
-                    'user_id': user.id,
-                    'ip_address': request.META['REMOTE_ADDR'],
-                    'email': user_email.email,
-                })
-                msg = _('A confirmation email has been sent to %s.') % user_email.email
-                messages.add_message(
-                    request,
-                    messages.SUCCESS,
-                    msg)
-        alternative_email = email_form.cleaned_data['alt_email']
+
+        elif new_primary != user.email:
+
+            # update notification settings for those set to primary email with new primary email
+            alert_email = UserOption.objects.get_value(user=user, project=None, key='alert_email')
+
+            if alert_email == user.email:
+                UserOption.objects.set_value(user=user, project=None, key='alert_email', value=new_primary)
+            options = UserOption.objects.filter(user=user, key='mail:email')
+            for option in options:
+                if option.value != user.email:
+                    continue
+                option.value = new_primary
+                option.save()
+
+            has_new_username = user.email == user.username
+
+            user.email = new_primary
+
+            msg = _('Your settings were saved')
+            messages.add_message(
+                request,
+                messages.SUCCESS,
+                msg)
+
+            if has_new_username and not User.objects.filter(username__iexact=new_primary).exists():
+                user.username = user.email
+            user.save()
+        return HttpResponseRedirect(request.path)
+
+    if email_form.is_valid():
+
+        alternative_email = email_form.cleaned_data['alt_email'].lower()
+
         # check if this alternative email already exists for user
-        if alternative_email and not UserEmail.objects.filter(user=user, email=alternative_email):
+        if alternative_email and not UserEmail.objects.filter(user=user, email__iexact=alternative_email):
             # create alternative email for user
             try:
                 with transaction.atomic():
@@ -520,18 +526,23 @@ def show_emails(request):
             else:
                 new_email.set_hash()
                 new_email.save()
-            # send confirmation emails to any non verified emails
-            user.send_confirm_email_singular(new_email)
-            logger.info('user.email.add', extra={
-                'user_id': user.id,
-                'ip_address': request.META['REMOTE_ADDR'],
-                'email': new_email.email,
-            })
-            msg = _('A confirmation email has been sent to %s.') % new_email.email
-            messages.add_message(
-                request,
-                messages.SUCCESS,
-                msg)
+                user.send_confirm_email_singular(new_email)
+                # Update newsletter subscription and mark as unverified
+                newsletter.update_subscription(
+                    user=user,
+                    verified=False,
+                )
+
+                logger.info('user.email.add', extra={
+                    'user_id': user.id,
+                    'ip_address': request.META['REMOTE_ADDR'],
+                    'email': new_email.email,
+                })
+                msg = _('A confirmation email has been sent to %s.') % new_email.email
+                messages.add_message(
+                    request,
+                    messages.SUCCESS,
+                    msg)
 
         messages.add_message(
             request, messages.SUCCESS, _('Your settings were saved.'))
